Begins qt-container

--- a/database/bibliography.bib
+++ b/database/bibliography.bib
@@ -26,7 +26,7 @@
 @misc{MiKTeX,
   author = {Christian Schenk},
   title = {{MiKTeX Project Page}},
-  url = {http://www.miktex.org/},
+  url = {http://www.miktex.org/}
 }
 
 @misc{KOMA,
@@ -38,7 +38,20 @@
 @misc{TeXnicCenter,
   author = {Sven Wiegand},
   title = {{TeXnicCenter}},
-  url = {http://www.TeXnicCenter.org/},
+  url = {http://www.TeXnicCenter.org/}
+}
+@misc{QtDoc:Containers,
+  author = {The Qt Company},
+  title = {Qt Documentation: Containers},
+  url = {http://doc.qt.io/qt-5/containers.html},
+  note = {Accessed: 2016-05-16}
+}
+
+@misc{QtDoc:QList,
+  author = {The Qt Company},
+  title = {Qt Documentation: QList},
+  url = {http://doc.qt.io/qt-5/qlist.html},
+  note = {Accessed: 2016-05-16}
 }
 
 @booklet{Marti06,
@@ -47,6 +60,7 @@
 		publisher = {Fausi Marti -- BFH},
 		year = {2006},
 		organization = {Berner Fachhochschule}
+		
 }
 
 @booklet{Erbsland08,
@@ -54,19 +68,19 @@
     title = {Diplomarbeit mit {LaTeX}},
     volume = {1.12},
     year = {2008},
-    url = {http://drzoom.ch/project/dml/},
+    url = {http://drzoom.ch/project/dml/}
 }
 
 @booklet{juergens:einfuehrung,
     author = {Manuela Jürgens},
     title = {LaTeX -- eine {E}inführung und ein bisschen mehr...},
     year = {2000},
-    url = {http://www.fernuni-hagen.de/zmi/katalog/A026.shtml},
+    url = {http://www.fernuni-hagen.de/zmi/katalog/A026.shtml}
 }
 
 @booklet{juergens:fortgeschritten,
     author = {Manuela Jürgens},
     title = {LaTeX -- {F}ortgeschrittene {A}nwendungen},
     year = {1995},
-    url = {http://www.fernuni-hagen.de/zmi/katalog/A027.shtml},
+    url = {http://www.fernuni-hagen.de/zmi/katalog/A027.shtml}
 }
