--- a/report.tex
+++ b/report.tex
@@ -206,6 +206,7 @@
 \include{chapters/introduction}
 \include{chapters/instructions}
 \include{chapters/typeareatest}
+\include{chapters/Performance}
 \include{chapters/conclusions}
 %---------------------------------------------------------------------------
 
