--- a/database/bibliography.bib
+++ b/database/bibliography.bib
@@ -5,41 +5,7 @@
 % Authors: brd3
 %
 
-@book{kopka:band1,
-	author = {Helmut Kopka},
-	title = {\LaTeX, Band 1: Eine Einführung},
-	publisher = {Pearson Studium},
-	journal = {Operations Research},
-	volume = {3},
-	year = {2002},
-	isbn = {3827370388}
-}
 
-@booklet{raichle:bibtex_programmierung,
-  title = {Einführung in die {BibTeX}-{P}rogrammierung},
-  author = {Bernd Raichle},
-  year = {2002},
-  institution = {DANTE},
-  url = {http://www.dante.de/dante/events/dante2002/handouts/raichle-bibtexprog.pdf}
-}
-
-@misc{MiKTeX,
-  author = {Christian Schenk},
-  title = {{MiKTeX Project Page}},
-  url = {http://www.miktex.org/}
-}
-
-@misc{KOMA,
-  title = {{KOMAScript} documentation project},
-  url = {http://koma-script.net.tf},
-  key = {KOMA}
-}
-
-@misc{TeXnicCenter,
-  author = {Sven Wiegand},
-  title = {{TeXnicCenter}},
-  url = {http://www.TeXnicCenter.org/}
-}
 @misc{QtDoc:Containers,
   author = {The Qt Company},
   title = {Qt Documentation: Containers},
@@ -53,34 +19,39 @@
   url = {http://doc.qt.io/qt-5/qlist.html},
   note = {Accessed: 2016-05-16}
 }
-
-@booklet{Marti06,
-		author = {Fausi Marti},
-		title = {Schreiben über {T}echnik -- {R}edaktion und {G}estaltung von technischen {B}erichten und anderen technikbezogenen {T}exten},
-		publisher = {Fausi Marti -- BFH},
-		year = {2006},
-		organization = {Berner Fachhochschule}
-		
+@misc{QtDoc:QLinkedList,
+	author = {The Qt Company},
+	title = {Qt Documentation: QLinkedList},
+	url = {http://doc.qt.io/qt-5/qlinkedlist.html},
+	note = {Accessed: 2016-05-16}
 }
-
-@booklet{Erbsland08,
-    author = {Tobias Erbsland and Andreas Nitsch},
-    title = {Diplomarbeit mit {LaTeX}},
-    volume = {1.12},
-    year = {2008},
-    url = {http://drzoom.ch/project/dml/}
+@misc{QtDoc:QVector,
+	author = {The Qt Company},
+	title = {Qt Documentation: QVector},
+	url = {http://doc.qt.io/qt-5/qvector.html},
+	note = {Accessed: 2016-05-16}
 }
-
-@booklet{juergens:einfuehrung,
-    author = {Manuela Jürgens},
-    title = {LaTeX -- eine {E}inführung und ein bisschen mehr...},
-    year = {2000},
-    url = {http://www.fernuni-hagen.de/zmi/katalog/A026.shtml}
+@misc{QtDoc:QMap,
+	author = {The Qt Company},
+	title = {Qt Documentation: QMap},
+	url = {http://doc.qt.io/qt-5/qmap.html},
+	note = {Accessed: 2016-05-16}
 }
-
-@booklet{juergens:fortgeschritten,
-    author = {Manuela Jürgens},
-    title = {LaTeX -- {F}ortgeschrittene {A}nwendungen},
-    year = {1995},
-    url = {http://www.fernuni-hagen.de/zmi/katalog/A027.shtml}
+@misc{QtDoc:QMultiMap,
+	author = {The Qt Company},
+	title = {Qt Documentation: QMultiMap},
+	url = {http://doc.qt.io/qt-5/qmultimap.html},
+	note = {Accessed: 2016-05-16}
+}
+@misc{QtDoc:QSet,
+	author = {The Qt Company},
+	title = {Qt Documentation: QSet},
+	url = {http://doc.qt.io/qt-5/qset.html},
+	note = {Accessed: 2016-05-16}
+}
+@misc{QtDoc:QHash,
+	author = {The Qt Company},
+	title = {Qt Documentation: QHash},
+	url = {http://doc.qt.io/qt-5/qhash.html},
+	note = {Accessed: 2016-05-16}
 }
