--- a/database/glossary.tex
+++ b/database/glossary.tex
@@ -1,5 +1,11 @@
 
 \newglossaryentry{BibTeX}{name={BibTeX},description={Program for the creation of 	bibliographical references and directories in \TeX or \LaTeX documents}}
 \newglossaryentry{Index}{name={Index},description={Index with keywords from text}}
+\newglossaryentry{GUI}{name={GUI},description={Graphical User Interface}}
+\newglossaryentry{KDE}{name={KDE},description={KDE is a free software community that produces software such as the Plasma Desktop and the KDE Frameworks}}
+
+\newglossaryentry{RGB}{name={RGB},description={RGB is a color model where red, green and blue are added together}}
+
+\newglossaryentry{BGR}{name={BGR},description={BGR is similar to RGB encoding but with red and blue swapped}}
 
 
