--- a/leader/title.tex
+++ b/leader/title.tex
@@ -1,1 +1,1 @@
-\providecommand{\heading}{Title of Thesis}		%  Insert Title of Thesis here
+\providecommand{\heading}{\textbf{\centering Video Viewer For Eye-tracking Platform}}		%  Insert Title of Thesis here
