--- a/leader/versions.tex
+++ b/leader/versions.tex
@@ -12,12 +12,8 @@ Versions
 \begin{tabbing}
 xxxxxxxxxxx\=xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
 Version	\> Date	\> Status			\> Remarks		\\
-0.1	\> 01.08.2013	\> Draft		\> Lorem ipsum dolor sit amet	\\	
-0.2	\> 21.08.2013	\> Draft		\> Phasellus scelerisque	\\ 
-0.3	\> 02.09.2013	\> Draft		\> Donec eget aliquam urna. Lorem ipsum dolor sit amet	\\ 
-1.0	\> 26.01.2014	\> Final		\> Lorem ipsum dolor sit ametPhasellus scelerisque, leo sed iaculis ornare 	\\ 
-1.1	\> 31.01.2014	\> Correction	\> Layout changed	\\
-1.2	\> 07.02.2014	\> Addition		\> Chapter 1.1 extended	\\
+0.1	\> 16.05.2016	\> Draft		\> Create Document	\\	
+0.2	\> 06.06.2016	\> Draft		\> First Complete Draft	\\ 	
 \end{tabbing}
 
 \end{textblock}
