--- a/leader/frontpage_with_picture.tex
+++ b/leader/frontpage_with_picture.tex
@@ -16,59 +16,37 @@
 	\includegraphics[scale=1.0]{images/BFH_Logo_B.png}
 \end{textblock}
 
-\begin{textblock}{154}(28,48)
-	\begin{picture}(150,2)
-		\put(0,0){\color{bfhgrey}\rule{150mm}{2mm}}
-	\end{picture}
-\end{textblock}
-
-\begin{textblock}{154}[0,0](28,50)
-	\includegraphics[scale=1.0]{images/placemarker.jpg}			% define cover picture
-\end{textblock}
-
-\begin{textblock}{154}(28,135)
-	\begin{picture}(150,2)
-		\put(0,0){\color{bfhgrey}\rule{150mm}{2mm}}
-	\end{picture}
-\end{textblock}
 \color{black}
 
 % Institution / titel / subtitel / authors / experts:
 %---------------------------------------------------------------------------
 \begin{flushleft}
 
-\vspace*{115mm}
+\vspace*{50mm}
 
+\begin{center}
+	\fontsize{20pt}{22pt}\selectfont
+	Project Work 2 \\		% Insert text
+\end{center}
+\vspace{5mm}
 \fontsize{26pt}{28pt}\selectfont 
 \heading				\\							% Read heading from file leader/title.tex
 \vspace{2mm}
 
-\fontsize{16pt}{20pt}\selectfont\vspace{0.3em}
-Place your subheading here 			\\				% Insert subheading
-\vspace{5mm}
-
 \fontsize{10pt}{12pt}\selectfont
-\textbf{Description of thesis (semester- / Bachelor thesis / etc.)} \\		% Insert text
+
 \vspace{3mm}
 
 % Abstract (eingeben):
 %---------------------------------------------------------------------------
-\begin{textblock}{150}(28,190)
-\fontsize{10pt}{12pt}\selectfont
-[Insert short text (abstract) if desired] \\ 
-This document serves as a template for the compilation of reports according to the guidelines of the BFH. The template is written in LATEX and supports the automatic writing of various directories, references, indexing and glossaries. This small text is a summary of this document with a length of 4 to max. 8 lines. \\ 
-The cover picture may be turned on or off in the lines 157/158 of the file template.tex.
-\end{textblock}
 
 \begin{textblock}{150}(28,225)
 \fontsize{10pt}{17pt}\selectfont
 \begin{tabbing}
 xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
-Degree course:	\> [z.B. Electrical and Communication Engineering]	\\		% insert name of degree course
-Authors:		\> [Test Peter, M\"uster R\"os\"a]		\\					% insert names
-Tutor:	\> [Dr.~Xxxx Xxxx, Dr.~Yyyy Yyyy]		\\							% insert names
-Constituent:	\> [Wwwww AG]					\\							% insert names
-Experts:		\> [Dr.~Zzzz Zzzz]				\\							% insert names
+Degree course:	\> Electrical and Communication Engineering	\\		% insert name of degree course
+Authors:		\> Timoth\a'{e}e Mollet		\\					% insert names
+Tutor:			\> Prof. Dr. Theo Kluter	\\							% insert names
 Date:			\> \versiondate					\\							% read from file leader/version.tex
 \end{tabbing}
 
