--- a/leader/management_summary.tex
+++ b/leader/management_summary.tex
@@ -1,4 +1,6 @@
 \chapter*{Management Summary}
 \label{chap:managementSummary}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus scelerisque, leo sed iaculis ornare, mi leo semper urna, ac elementum libero est at risus. Donec eget aliquam urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fermentum nunc sollicitudin leo porttitor volutpat. Duis ac enim lectus, quis malesuada lectus. Aenean vestibulum suscipit justo, in suscipit augue venenatis a. Donec interdum nibh ligula. Aliquam vitae dui a odio cursus interdum quis vitae mi. Phasellus ornare tortor fringilla velit accumsan quis tincidunt magna eleifend. Praesent nisl nibh, cursus in mattis ac, ultrices ac nulla. Nulla ante urna, aliquet eu tempus ut, feugiat id nisl. Nunc sit amet mauris vitae turpis scelerisque mattis et sed metus. Aliquam interdum congue odio, sed semper elit ullamcorper vitae. Morbi orci elit, feugiat vel hendrerit nec, sollicitudin non massa. Quisque lacus metus, vulputate id ullamcorper id, consequat eget orci \nocite{kopka:band1} \nocite{Marti06}. 
+Eye tracing has a wide area of applications such as sports and psychology. To analyze gaze direction from a eye-tracking system for sports, software is needed that can display the gaze position on a video playback. Each gaze point needs to be synchronized with the video. 
+
+The target for this project was to develop such a software that can be expanded later but is feature complete so that it can be used for analyzing footage and gaze data.
