--- a/appendix/appendixexemple.tex
+++ b/appendix/appendixexemple.tex
@@ -4,6 +4,8 @@
 \begingroup\let\clearpage\relax
 \chapter{Coding Guidelines}
 \label{chap:Coding Conventions}
+
+The Coding Guidelines are not written by me, they are a copy of our coding guidelines at work at Ruag. I got permission to include them in this document. 
 \section{Coding Style}
 \begin{itemize}
 	\item In general qtcreator >= 3.3 default C++ (Qt built-in) code style
