--- a/report.tex
+++ b/report.tex
@@ -66,6 +66,7 @@
 \definecolor{bfhgrey}{rgb}{0.41,0.49,0.57}      % BFH grey
 %\definecolor{linkcolor}{rgb}{0,0,0.8}     			% Blue for the web- and cd-version!
 \definecolor{linkcolor}{rgb}{0,0,0}        			% Black for the print-version!
+
 %---------------------------------------------------------------------------
 
 % Hyperref Package (Create links in a pdf)
@@ -148,8 +149,7 @@
 \usepackage[nonumberlist]{glossaries}
 \makeglossaries
 \include{database/glossary}
-
-
+\usepackage{pdfpages}
 %---------------------------------------------------------------------------
 
 % Intro:
@@ -266,7 +266,6 @@
 \settocdepth{section}
 \include{appendix/appendixexemple}
 \include{appendix/appendixexempleB}
-\include{appendix/contentCDROM}
 %---------------------------------------------------------------------------
 
 %---------------------------------------------------------------------------
